# adafruit-clue-embassy

./: .gitignore  Cargo.toml  README.md  build.rs  exampletouf2.sh  memory.x  rust-toolchain.toml
.cargo/: config.toml
examples/: ble-nus.rs  blink.rs  lcd.rs  sensors-ble-adv.rs  sensors-ble.rs  sensors.rs
src/: lib.rs  pins.rs
