[package]
authors = ["Michael Neufeld <mj9eld@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Embassy basic board support for Adafruit Clue"
license = "MIT"
keywords = ["arm", "cortex-m", "nrf52", "hal"]
name = "embassy-adafruit-clue"
version = "0.0.1"
edition = "2021"


[features]
default = ["nightly"]
nightly = ["embassy-executor/nightly", "embassy-nrf/nightly", "embassy-net/nightly", "embassy-nrf/unstable-traits", "embassy-time/nightly", "embassy-time/unstable-traits", "static_cell/nightly",
           "embassy-usb", "embedded-io/async", "embassy-net"]

[dependencies]
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice", features = [
    "nightly",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "ble-central",
    "critical-section-impl",
] }
nrf-softdevice-s140 = { version = "0.1.1", git = "https://github.com/embassy-rs/nrf-softdevice" }

#[dev-dependencies]
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["tcp", "dhcpv4", "medium-ethernet"], optional=true }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["msos-descriptor"], optional=true }
futures = { version = "0.3.5", default-features = false }
embedded-io = "0.4.0"
static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"


nb = "1.0.0"
shared-bus = "0.2.4"
heapless = "0.7.9"
# screen
embedded-graphics = "0.7"
st7789 = "0.6.1"
display-interface = "0.4"
display-interface-spi = "0.4"
# gyro/accel
lsm6ds33 = "0.3.0"
# magnetometer
lis3mdl = { git = "https://github.com/ryanrightmer/lis3mdl" }
# prox/gesture/light
apds9960 = "0.1.0"
# humidity
sht3x = { git = "https://github.com/reitermarkus/sht3x-rs" }
# temp/pressure
# XXX this has defmt version conflicts...
#bmp280-rs = "0.1.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
