[package]
authors = ["Michael Neufeld <mj9eld@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Embassy basic board support for Adafruit Clue"
license = "MIT"
keywords = ["arm", "cortex-m", "nrf52", "hal"]
name = "adafruit-clue-embassy"
version = "0.0.1"
edition = "2021"

[dependencies]
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice", features = [
    "nightly",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "ble-central",
    "ble-gatt-server",
    "critical-section-impl",
] }

[dev-dependencies]
#nrf-softdevice-s140 = { version = "0.1.1", git = "https://github.com/embassy-rs/nrf-softdevice" }
#embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
#static_cell = "1.2.0"
#{ version = "1.2.0", git = "https://github.com/embassy-rs/" }
#embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "tcp", "dhcpv4", "medium-ethernet"], optional=true }
#embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["msos-descriptor"], optional=true }
#futures = { version = "0.3.5", default-features = false }
#embedded-io = "0.4.0"
#static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

#nb = "1.0.0"

heapless = "0.7.9"
# screen
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
mipidsi = "0.7.1"

# gyro/accel
lsm6ds33 = "0.3.0"
# magnetometer
lis3mdl = { git = "https://github.com/ryanrightmer/lis3mdl" }
# prox/gesture/light
apds9960 = "0.1.0"
# humidity
sht3x = { git = "https://github.com/reitermarkus/sht3x-rs" }
# temp/pressure
bmp280-rs = "0.1.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
